# eval-cohort-slicer

./: README.md  pyproject.toml
examples/: eval.jsonl
src/eval_cohort_slicer/: __init__.py  __main__.py  cli.py  core.py
tests/: test_eval_cohort_slicer.py
